# dusting-books

./: README.md
.github/workflows/: build-tauri.yml  release-tauri.yml
libs/bibtex_parser/: Cargo.toml  README.md
libs/bibtex_parser/src/: bibtex.pest  errors.rs  lib.rs  main.rs  parser.rs
libs/bibtex_parser/src/models/: document.rs  entry.rs  key_value.rs  mod.rs  preamble.rs  value.rs
libs/bibtex_validator/: Cargo.toml  README.md
libs/bibtex_validator/src/: errors.rs  lib.rs  main.rs
libs/bibtex_validator/src/models/: mod.rs  report.rs  validator.rs
libs/bibtex_validator/validators/: default.yaml
libs/dusty_errors/: Cargo.toml
libs/dusty_errors/src/: lib.rs
libs/logger/: Cargo.toml
libs/logger/src/: internal.rs  lib.rs  macros.rs
program/: README.md  package-lock.json
program/src-tauri/: Cargo.toml  tauri.conf.json
program/src-tauri/assets/validators/: default.json
program/src-tauri/src/: lib.rs  main.rs
program/src-tauri/src/main_window/: mod.rs
program/src-tauri/src/tray_service/: mod.rs
test/: literatur.bib
