[package]
name = "bibtex_validator"
version = "0.1.0"
edition = "2024"

[lib]
name = "bibtex_validator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bibtex_parser = {path = "../bibtex_parser"}
logger = {path = "../logger"}
dusty_errors = {path = "../dusty_errors"}
